erDiagram
    students ||--o{ devices : owns
    students ||--o{ event_requests : submits
    event_requests ||--o{ event_request_devices : contains
    event_request_devices ||--o{ event_device_logs : records
    devices ||--o{ device_logs : records
    users ||--o{ devices : reviews
    users ||--o{ event_requests : reviews
    users ||--o{ event_request_devices : verifies
    users ||--o{ event_device_logs : handles
    users ||--o{ device_logs : handles
    users ||--o{ audit_logs : performs

    users {
        int user_id PK
        string username
        string email
        string password_hash
        string full_name
        string role
        string status
        datetime created_at
        datetime updated_at
    }
    students {
        string student_id PK
        string first_name
        string last_name
        string course_year_level
        string status
        datetime created_at
        datetime updated_at
    }
    devices {
        int device_id PK
        string student_id FK
        string device_name
        string brand
        string model
        string serial_number
        string device_type
        string device_purpose
        string registration_status
        string device_status
        int reviewed_by FK
        datetime reviewed_at
        string remarks
        string image_path
    }
    event_requests {
        int event_request_id PK
        string student_id FK
        string responsible_person
        string organization
        string event_name
        string event_purpose
        string approval_doc_type
        string approval_doc_ref
        date start_date
        date end_date
        string status
        boolean is_submitted
        boolean is_accommodated
        int reviewed_by FK
        datetime reviewed_at
        string remarks
        datetime created_at
        datetime updated_at
    }
    event_request_devices {
        int event_device_id PK
        int event_request_id FK
        string device_name
        string brand
        string model
        string device_type
        string serial_number
        int quantity
        int verified_by FK
        datetime verified_at
        string device_status
        string remarks
        datetime created_at
        datetime updated_at
    }
    event_device_logs {
        int event_log_id PK
        int event_device_id FK
        string event_type
        datetime event_time
        int handled_by FK
        string notes
        datetime created_at
    }
    device_logs {
        int log_id PK
        int device_id FK
        string student_id FK
        string event_type
        datetime event_time
        int handled_by FK
        string logout_type
        boolean auto_exit
        string notes
        datetime created_at
    }
    audit_logs {
        int audit_id PK
        int user_id FK
        string action_type
        string target_table
        string target_id
        json old_values
        json new_values
        string ip_address
        datetime created_at
    }
    system_settings {
        string setting_key PK
        string setting_value
        string description
        datetime updated_at
    }
